# notifi-printer

./: .env.example  Cargo.toml  README.md
benches/: print_data_merging.rs
src/: http.rs  main.rs  printer.rs
src/service/: bsky.rs  email.rs  github.rs  mod.rs  twitch.rs
