[package]
name = "notifi-printer"
version = "0.1.0"
edition = "2021"

[dependencies]
console-subscriber = "0.4.1"
dotenvy = "0.15.7"
reqwest = { version = "0.12.8", features = ["gzip", "brotli", "zstd", "json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
