[package]
name = "notifi-printer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
console-subscriber = "0.4.1"
dotenvy = "0.15.7"
futures-util = "0.3.31"
native-tls = "0.2.12"
reqwest = { version = "0.12.8", features = ["gzip", "brotli", "zstd", "json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full", "tracing"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
